# Cursor-Models

./: .cursorrules  .gitignore  CHANGELOG.md  Cursor AI Models - Complete Reference.md  IMPLEMENTATION_SUMMARY.md  Multi-stack-cursor-rules.md  PROJECT_GUIDE.md  README.md  ai-ecosystem.html  cursorrules-cpp-juce.md  cursorrules-javascript-strict-mode.md  cursorrules-node-express.md  cursorrules-react-vite.md  cursorrules-scripting.md
api/: README.md
frontend/: .cursorrules  package.json  tsconfig.json  vite.config.ts
frontend/src/: README.md
juce/: .cursorrules  CMakeLists.txt
juce/Source/: README.md
scripts/: README.md
